--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -19,9 +19,8 @@ jobs:
       - name: Train model
         run: |
           # Your ML workflow goes here
-          pip install -U pipenv
-          pipenv install --dev
-          pipenv run python train.py
+          pip install -r requirements.txt
+          python train.py
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
