--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,17 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
     container: ghcr.io/iterative/cml:0-dvc2-base1
-    # container: docker://dvcorg/cml-py3:latest
     steps:
       - uses: actions/checkout@v3
-      # may need to setup NodeJS & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16'
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.x'
-      - uses: iterative/setup-cml@v1
+      # - uses: iterative/setup-cml@v1
       - name: Train model
         run: |
           # Your ML workflow goes here
@@ -32,7 +24,7 @@ jobs:
           cat results.txt >> report.md
  
           echo "## Visualizations" > report.md
-          cml-publish acc_vs_val_acc.png
-          cml-publish loss_vs_val_loss.png
+          cml asset publish acc_vs_val_acc.png
+          cml asset publish loss_vs_val_loss.png
 
           cml comment create report.md
