--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,10 +4,11 @@ jobs:
   run:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: ghcr.io/iterative/cml:0-dvc2-base1
+    # container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
-      - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+      - uses: iterative/setup-cml@v1
       - name: Train model
         run: |
           # Your ML workflow goes here
