--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -29,3 +29,4 @@ jobs:
           cml asset publish loss_vs_val_loss.png --md >> report.md
 
           cml comment create report.md
+          cml-send-comment report.md
