--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -20,14 +20,15 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Post reports as comments in GitHub PRs
-          echo "# Model Report" >> report.md
+          echo "$REPO_TOKEN"
+          # # Post reports as comments in GitHub PRs
+          # echo "# Model Report" >> report.md
 
-          echo "## Metrics" >> report.md 
-          cat results.txt >> report.md
+          # echo "## Metrics" >> report.md 
+          # cat results.txt >> report.md
  
-          echo "## Visualizations" >> report.md
-          cml asset publish acc_vs_val_acc.png --md >> report.md
-          cml asset publish loss_vs_val_loss.png --md >> report.md
+          # echo "## Visualizations" >> report.md
+          # cml asset publish acc_vs_val_acc.png --md >> report.md
+          # cml asset publish loss_vs_val_loss.png --md >> report.md
 
-          cml comment create report.md
+          # cml comment create report.md
