--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,25 +4,23 @@ jobs:
   run:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: ghcr.io/iterative/cml:0-dvc2-base1
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v3
-      # may need to setup NodeJS & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16'
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      # - uses: iterative/setup-cml@v1
       # - uses: actions/setup-python@v4
       #   with:
-      #     python-version: '3.x'
-      - uses: iterative/setup-cml@v1
+      #     python-version: '3.10'
       - name: Train model
         run: |
           # Your ML workflow goes here
           pip install -r requirements.txt
           python train.py
       - name: Write CML report
-        # env:
-        #   REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
