--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,15 +4,15 @@ jobs:
   run:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
-    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
+    # container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
+      - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      # - uses: iterative/setup-cml@v1
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.10'
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - name: Train model
         run: |
           # Your ML workflow goes here
