added dvc to project

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,17 +7,20 @@ jobs:
     # container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: iterative/setup-cml@v1
+      - uses: iterative/setup-dvc@v1
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      
       - name: Train model
         run: |
           # Your ML workflow goes here
           pip install -r requirements.txt
           python train.py
+      
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
