--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -17,10 +17,12 @@ jobs:
       
       - name: Train model
         run: |
-          # Your ML workflow goes here
-          pip install -r requirements.txt
-          python train.py
-      
+          # setup dependencies
+          pip install pipenv
+          pipenv install --dev
+
+          # run the dvc pipeline
+          pipenv run dvc run repro
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -29,10 +31,10 @@ jobs:
           echo "# Model Report" >> report.md
 
           echo "## Metrics" >> report.md 
-          cat results.txt >> report.md
+          cat data/experiment/metrics.json >> report.md
  
           echo "## Visualizations" >> report.md
-          cml asset publish acc_vs_val_acc.png --md >> report.md
-          cml asset publish loss_vs_val_loss.png --md >> report.md
+          cml asset publish data/experiment/plots.acc_vs_val_acc.png --md >> report.md
+          cml asset publish data/experiment/plots/loss_vs_val_loss.png --md >> report.md
           
           cml comment create report.md
