--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,203 @@
 absl-py==1.3.0
+aiohttp==3.8.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+amqp==5.1.1
+antlr4-python3-runtime==4.9.3
 anyio==3.6.2
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.8
+asttokens==2.2.0
 astunparse==1.6.3
+async-timeout==4.0.2
+asyncssh==2.12.0
+atpublic==3.1.1
 attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
+billiard==3.6.4.0
+black==22.10.0
 bleach==5.0.1
 cachetools==5.2.0
+celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
-contourpy==1.0.5
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.6
+commonmark==0.9.1
+configobj==5.0.6
+contourpy==1.0.6
+cryptography==38.0.4
 cycler==0.11.0
-debugpy==1.6.3
+debugpy==1.6.4
 decorator==5.1.1
 defusedxml==0.7.1
+dictdiffer==0.9.0
+diskcache==5.4.0
 distlib==0.3.6
-editdistance==0.6.0
+distro==1.8.0
+dpath==2.1.1
+dulwich==0.20.50
+dvc==2.35.2
+dvc-data==0.28.0
+dvc-http==2.27.2
+dvc-objects==0.14.0
+dvc-render==0.0.14
+dvc-task==0.1.6
+dvclive==1.0.3
+editdistance==0.6.1
 efficientnet==1.0.0
 entrypoints==0.4
 essential-generators==1.0
-executing==1.1.1
+executing==1.2.0
 fastjsonschema==2.16.2
 filelock==3.8.0
-flatbuffers==22.9.24
-fonttools==4.37.4
+flatbuffers==22.11.23
+flatten-dict==0.4.2
+flufl.lock==7.1.1
+fonttools==4.38.0
+frozenlist==1.3.3
+fsspec==2022.11.0
+funcy==1.17
+future==0.18.2
 gast==0.4.0
-google-auth==2.13.0
+gitdb==4.0.10
+GitPython==3.1.29
+google-auth==2.14.1
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.50.0
+grandalf==0.6
+grpcio==1.51.1
 h5py==3.7.0
+hydra-core==1.2.0
 idna==3.4
-imageio==2.22.2
+imageio==2.22.4
 imgaug==0.4.0
-ipykernel==6.16.1
-ipython==8.5.0
+ipykernel==6.17.1
+ipython==8.7.0
 ipython-genutils==0.2.0
-jedi==0.18.1
+isort==5.10.1
+iterative-telemetry==0.0.6
+jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
-jsonschema==4.16.0
-jupyter-server==1.21.0
-jupyter_client==7.4.3
-jupyter_core==4.11.2
+jsonschema==4.17.3
+jupyter-server==1.23.3
+jupyter_client==7.4.7
+jupyter_core==5.1.0
 jupyterlab-pygments==0.2.2
-keras==2.10.0
+keras==2.11.0
 Keras-Applications==1.0.8
 keras-ocr==0.8.9
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
+kombu==5.2.4
 libclang==14.0.6
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib==3.6.1
+matplotlib==3.6.2
 matplotlib-inline==0.1.6
 mistune==2.0.4
 mlxtend==0.21.0
-nbclassic==0.4.5
-nbclient==0.7.0
-nbconvert==7.2.2
+multidict==6.0.2
+mypy-extensions==0.4.3
+nanotime==0.5.2
+nbclassic==0.4.8
+nbclient==0.7.2
+nbconvert==7.2.5
 nbformat==5.7.0
 nest-asyncio==1.5.6
-networkx==2.8.7
-notebook==6.5.1
-notebook_shim==0.2.0
-numpy==1.23.4
+networkx==2.8.8
+notebook==6.5.2
+notebook_shim==0.2.2
+numpy==1.23.5
 oauthlib==3.2.2
+omegaconf==2.2.3
 opencv-python==4.6.0.66
 opt-einsum==3.3.0
 packaging==21.3
-pandas==1.5.1
+pandas==1.5.2
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.2.0
-pipenv==2022.10.12
-platformdirs==2.5.2
+Pillow==9.3.0
+pipenv==2022.11.30
+platformdirs==2.5.4
 prometheus-client==0.15.0
-prompt-toolkit==3.0.31
+prompt-toolkit==3.0.33
 protobuf==3.19.6
-psutil==5.9.3
+psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyclipper==1.3.0.post3
+pyclipper==1.3.0.post4
 pycparser==2.21
+pydot==1.4.2
+pygit2==1.11.1
 Pygments==2.13.0
+pygtrie==2.5.0
 pyparsing==3.0.9
-pyrsistent==0.18.1
+pyrsistent==0.19.2
 python-dateutil==2.8.2
-pytz==2022.5
+pytz==2022.6
 PyWavelets==1.4.1
 PyYAML==6.0
 pyzmq==24.0.1
 requests==2.28.1
 requests-oauthlib==1.3.1
+rich==12.6.0
 rsa==4.9
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 scikit-image==0.19.3
-scikit-learn==1.1.2
+scikit-learn==1.1.3
 scipy==1.9.3
+scmrepo==0.1.3
 Send2Trash==1.8.0
 Shapely==1.8.5.post1
+shortuuid==1.0.11
+shtab==1.5.8
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
-stack-data==0.5.1
-tensorboard==2.10.1
+stack-data==0.6.2
+tabulate==0.9.0
+tensorboard==2.11.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.10.0
-tensorflow-estimator==2.10.0
-tensorflow-io-gcs-filesystem==0.27.0
-termcolor==2.0.1
-terminado==0.16.0
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+tensorflow-io-gcs-filesystem==0.28.0
+termcolor==2.1.1
+terminado==0.17.0
 threadpoolctl==3.1.0
 tifffile==2022.10.10
 tinycss2==1.2.1
+tomli==2.0.1
+tomlkit==0.11.6
 tornado==6.2
 tqdm==4.64.1
-traitlets==5.5.0
+traitlets==5.6.0
 typing_extensions==4.4.0
-urllib3==1.26.12
+urllib3==1.26.13
 validators==0.20.0
-virtualenv==20.16.5
+vine==5.0.0
+virtualenv==20.17.0
 virtualenv-clone==0.5.7
+voluptuous==0.13.1
 wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client==1.4.1
+websocket-client==1.4.2
 Werkzeug==2.2.2
 wrapt==1.14.1
+yarl==1.8.1
+zc.lockfile==2.0
