--- a/dvc.yaml
+++ b/dvc.yaml
@@ -21,8 +21,9 @@ stages:
     cmd: pipenv run python src/03_evaluate.py
     deps:
       - data/experiment/cnn_classifier
-    outs:
-      - data/experiment/metrics.json
+    metrics:
+      - data/experiment/metrics.json:
+          cache: false
   visualize:
     cmd: pipenv run python src/04_visualize.py
     deps:
