diff with master

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -27,11 +27,16 @@ jobs:
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git fetch --prune
+
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
 
           echo "## Metrics" >> report.md 
           cat data/experiment/metrics.json >> report.md
+
+          echo "## Diff" >> report.md
+          dvc metrics diff --show-md master > report.md
  
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
