--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -36,7 +36,7 @@ jobs:
           # cat data/experiment/metrics.json >> report.md
 
           echo "## Metrics & Diff" >> report.md
-          dvc metrics diff --show-md master > report.md
+          dvc metrics diff --show-md main > report.md
  
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
