--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -30,12 +30,12 @@ jobs:
           git fetch --prune
 
           # Post reports as comments in GitHub PRs
-          echo "# Model Report" >> report.md
+          echo "# Model Report" > report.md
 
-          # echo "## Metrics" >> report.md 
+          # echo "## Metrics" > report.md 
           # cat data/experiment/metrics.json >> report.md
 
-          echo "## Metrics & Diff" >> report.md
+          echo "## Metrics & Diff" > report.md
           dvc metrics diff --show-md main > report.md
  
           echo "## Visualizations" >> report.md
