--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -30,13 +30,10 @@ jobs:
           git fetch --prune
 
           # Post reports as comments in GitHub PRs
-          echo "# Model Report" > report.md
+          echo "# Model Report" >> report.md
 
-          # echo "## Metrics" > report.md 
-          # cat data/experiment/metrics.json >> report.md
-
-          echo "## Metrics & Diff" > report.md
-          dvc metrics diff --show-md main > report.md
+          echo "## Metrics & Diff" >> report.md
+          dvc metrics diff --show-md main >> report.md
  
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
