test stage in pipeline

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -32,3 +32,7 @@ stages:
     outs:
       - data/experiment/plots/acc_vs_val_acc.png
       - data/experiment/plots/loss_vs_val_loss.png
+  test:
+    cmd: pipenv run test src/05_test.py
+    deps:
+      - data/experiment/metrics.json
