--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,7 +1,7 @@
 name: CML
-on: [push]
+on: push
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
     # optionally use a convenient Ubuntu LTS + DVC + CML image
     # container: docker://ghcr.io/iterative/cml:0-dvc2-base1
@@ -23,6 +23,7 @@ jobs:
 
           # run the dvc pipeline
           pipenv run dvc repro
+          pipenv run dvc push
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
