--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -39,5 +39,6 @@ jobs:
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
           cml asset publish data/experiment/plots/loss_vs_val_loss.png --md >> report.md
+          cml asset publish data/experiment/plots/confusion_matrix.png --md >> report.md
           
           cml comment create report.md
