--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,6 +16,8 @@ jobs:
           python-version: '3.10'
       
       - name: Train model
+        env:
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           # setup dependencies
           pip install pipenv
@@ -23,7 +25,7 @@ jobs:
 
           # run the dvc pipeline
           pipenv run dvc repro
-          # pipenv run dvc push
+          pipenv run dvc push
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
