--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -38,10 +38,10 @@ jobs:
           echo "## Wrokspace vs Main" >> report.md
 
           echo "### Parameters" >> report.md
-          pipenv run dvc params diff --all --show-md main >> report.md
+          pipenv run dvc params diff --all --md main >> report.md
 
           echo "### Metrics" >> report.md
-          pipenv run dvc metrics diff --show-md main >> report.md
+          pipenv run dvc metrics diff --md main >> report.md
  
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
