--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -41,7 +41,7 @@ jobs:
           pipenv run dvc params diff --all --md main >> report.md
 
           echo "### Metrics" >> report.md
-          pipenv run dvc metrics diff --md main >> report.md
+          pipenv run dvc metrics diff --all --md main >> report.md
  
           echo "## Visualizations" >> report.md
           cml asset publish data/experiment/plots/acc_vs_val_acc.png --md >> report.md
