--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,8 +24,8 @@ jobs:
           pipenv install --dev
 
           # run the dvc pipeline
-          pipenv run dvc repro
-          pipenv run dvc push
+          pipenv run dvc repro -f
+          # pipenv run dvc push
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
