--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -38,7 +38,7 @@ jobs:
           echo "## Wrokspace vs Main" >> report.md
 
           echo "### Metrics" >> report.md
-          pipenv run dvc metrics diff --all --md main >> report.md
+          dvc metrics diff --show-md main >> report.md
 
           echo "### Parameters" >> report.md
           pipenv run dvc params diff --all --md main >> report.md
