--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -41,7 +41,7 @@ jobs:
           pipenv run dvc metrics diff --all --md origin/main >> report.md
 
           echo "### Parameters" >> report.md
-          pipenv run dvc params diff --all --md main >> report.md
+          pipenv run dvc params diff --all --md origin/main >> report.md
 
  
           echo "## Visualizations" >> report.md
