--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -31,6 +31,7 @@ jobs:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git fetch --prune
+          pipenv run dvc pull
 
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
