--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -29,6 +29,7 @@ jobs:
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           git fetch --prune
           pipenv run dvc pull
