--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -25,14 +25,14 @@ jobs:
 
           # run the dvc pipeline
           pipenv run dvc repro -f --no-run-cache
-          pipenv run dvc push
+          # pipenv run dvc push
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
         run: |
           git fetch --prune
-          pipenv run dvc pull
+          # pipenv run dvc pull
 
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
