--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -37,6 +37,8 @@ jobs:
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
 
+          cml tensorboard connect --logdir=./logs --name="Go to tensorboard" --md >> report.md
+
           echo "## Wrokspace vs Main" >> report.md
 
           echo "### Metrics" >> report.md
