--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -38,7 +38,7 @@ jobs:
           # Post reports as comments in GitHub PRs
           echo "# Model Report" >> report.md
 
-          cml tensorboard connect --logdir=./logs --name="Go to tensorboard" --md >> report.md
+          # cml tensorboard connect --logdir=./logs --name="Go to tensorboard" --md >> report.md
 
           echo "## Wrokspace vs Main" >> report.md
 
